<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signInToolbar"
        android:layout_width="match_parent"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_height="?android:attr/actionBarSize"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_info_log_in"
        android:gravity="center"
        android:layout_margin="@dimen/overAllMargin"
        android:textSize="@dimen/description"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdgeLength="@dimen/radius"
        android:elevation="@dimen/radius"
        android:background="@drawable/sign_up_background"
        android:padding="@dimen/overAllMargin"
        android:layout_margin="@dimen/overAllMargin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedEmailLoginTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radius"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/signInEmailEditText"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedSignInPasswordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radius"
                app:endIconMode="password_toggle"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/signInPasswordEditText"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/radius"
                android:text="@string/sign_in"
                style="@style/Button"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>